--- a/public/index.html
+++ b/public/index.html
@@ -4,12 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Socket Client</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 </head>
-<body>
-    <h1>Socket Client</h1>
+<body class="container">
+    <h1 class="mt-2">Socket Client</h1>
     <hr>
 
+    <p>
+        Server Status
+        <span id="lblOnline" class="text-success">Online</span>
+        <span id="lblOffline" class="text-danger">Offline</span>
+    </p>
 
+    <script src="./socket.io/socket.io.js"></script>
     <script src="./js/socket-client.js"></script> 
 </body>
 </html>
